src/regression/parse_pool/libtest1.sfp.out

sfc in library: parse_pool/libtest1.sfl
syntax error at 2 at line:
application blink $(FENNEC_FOX_LIB)/Application/SimpleBlink
^
